Fix alignment issue on right-aligned messages

--- a/app/css/_shared.styl
+++ b/app/css/_shared.styl
@@ -382,6 +382,10 @@ body {
 		}
 	}
 
+	&--full-right__container {
+		text-align: right;
+	}
+
 	&--avatar-right,
 	&--full-right {
 		justify-content: flex-end;
